# easymlx

./: .gitignore  CONTRIBUTING.md  LICENCE  README.md  pyproject.toml
docs/: api_server.md  conf.py  contributing.rst  environment_variables.md  esurge.md  esurge_examples.md  getting_started.md  index.rst  install.md  quantization.md  requirements.txt
docs/_static/: style.css
docs/api_docs/: axis.rst  index.rst
docs/api_docs/caching/: _abstracts.rst  _metadatabuilder.rst  _specs.rst  index.rst
docs/api_docs/inference/: decoders.rst  index.rst  inference_engine_interface.rst  logits_process.rst  openai_api_modules.rst  sampling_funcs.rst  sampling_params.rst
docs/api_docs/infra/: base_config.rst  base_module.rst  base_state.rst  errors.rst  etils.rst  factory.rst  index.rst  modeling_outputs.rst  utils.rst
docs/api_docs/layers/: index.rst
docs/api_docs/modules/: index.rst
docs/api_docs/operations/: _attention_outputs.rst  _base_operation.rst  _operation_impl.rst  _operation_meta.rst  executor.rst  index.rst
docs/api_docs/scripts/: convert_hf_to_easymlx.rst  convert_hf_to_easymlx_batch.rst  index.rst
docs/api_docs/utils/: helpers.rst  index.rst  lazy_import.rst  parameters_transformation.rst  registery.rst  traversals.rst
docs/api_docs/workers/: index.rst  loggers.rst
docs/infra/: adding_models.md  base_config.md  base_module.md  overview.md
easymlx/: __init__.py  axis.py
easymlx/caching/: __init__.py  _abstracts.py  _specs.py
easymlx/caching/hybrid/: __init__.py  cache.py
easymlx/caching/paged/: __init__.py  cache.py  page_cache.py  page_metadata.py  paged_kv_cache.py  turboquant.py
easymlx/caching/recurrent/: __init__.py  cache.py
easymlx/caching/transformer/: cache.py
easymlx/inference/: __init__.py  decoders.py  inference_engine_interface.py  openai_api_modules.py  sampling_params.py
easymlx/inference/esurge/: __init__.py  config.py  dashboard.py  engine.py  engine_types.py  esurge_engine.py  metrics.py  monitoring.py  outputs.py  sampling_params.py  utils.py
easymlx/inference/reasoning/: __init__.py  abstract_reasoning.py  auto_detect.py  basic_parsers.py
easymlx/inference/tools/: __init__.py  abstract_tool.py  auto_detect.py  utils.py
easymlx/infra/: __init__.py  base_config.py  base_module.py  errors.py  etils.py  factory.py  modeling_outputs.py
easymlx/infra/mixins/: __init__.py  bridge.py  generation.py  operation_cache.py
easymlx/layers/: __init__.py
easymlx/layers/attention/: __init__.py  _flexible.py  _performer.py
easymlx/layers/quantization/: __init__.py
easymlx/layers/rotary/: __init__.py
easymlx/modules/: __init__.py
easymlx/modules/_base/: _base_task_module.py  _features.py  causal_lm_module.py  conditional_generation_module.py  embedding_module.py  question_answering_module.py  sequence_classification_module.py
easymlx/modules/afm7/: __init__.py  afm7_configuration.py  modeling_afm7.py
easymlx/modules/apertus/: modeling_apertus.py
easymlx/modules/auto/: __init__.py  auto_configuration.py  auto_modeling.py
easymlx/modules/baichuan_m1/: modeling_baichuan_m1.py
easymlx/modules/bailing_moe/: bailing_moe_configuration.py
easymlx/modules/bailing_moe_linear/: bailing_moe_linear_configuration.py  modeling_bailing_moe_linear.py
easymlx/modules/bitnet/: __init__.py  modeling_bitnet.py
easymlx/modules/cohere/: __init__.py  modeling_cohere.py
easymlx/modules/cohere2/: cohere2_configuration.py  modeling_cohere2.py
easymlx/modules/dbrx/: __init__.py  dbrx_configuration.py  modeling_dbrx.py
easymlx/modules/deepseek/: __init__.py  modeling_deepseek.py
easymlx/modules/deepseek_v2/: modeling_deepseek_v2.py
easymlx/modules/deepseek_v3/: modeling_deepseek_v3.py
easymlx/modules/deepseek_v32/: __init__.py  deepseek_v32_configuration.py  modeling_deepseek_v32.py
easymlx/modules/dots1/: __init__.py  dots1_configuration.py  modeling_dots1.py
easymlx/modules/ernie4_5/: __init__.py  modeling_ernie4_5.py
easymlx/modules/exaone/: __init__.py  (+2 more)
easymlx/operations/: __init__.py  _base_operation.py  _operation_meta.py  executor.py
easymlx/scripts/: convert_hf_to_easymlx_batch.py
easymlx/utils/: helpers.py  traversals.py
easymlx/workers/: loggers.py
scripts/: bench_dflash_mlx.py  bench_tflops.py  convert_hf_to_easymlx.py  format_and_generate_docs.py  install.sh  profile_dflash_mlx.py
tests/: __init__.py  conftest.py  test_response_store.py
tests/app/: test_easymlx_app.py
tests/inference/: test_dflash_loader.py  test_esurge_distributed.py  test_esurge_engine.py  test_esurge_layout_imports.py  test_esurge_multimodal.py  test_esurge_runners.py  test_esurge_runtime_refactor.py  test_esurge_scheduler_core.py  test_esurge_server.py  test_esurge_structured.py  test_tool_parser_parity.py
tests/layers/: test_attention_performer.py
tests/modules/: __init__.py  test_afm7.py  test_afmoe.py  test_apertus.py  test_auto_new_families.py  test_baichuan_m1.py  test_bailing_moe.py  test_bailing_moe_linear.py  test_bitnet.py  test_cohere.py  test_cohere2.py  test_dbrx.py  test_deepseek.py  test_deepseek_v2.py  test_deepseek_v3.py  test_deepseek_v32.py  test_dots1.py  test_ernie4_5.py  test_ernie4_5_moe.py  test_exaone.py  test_exaone4.py  test_exaone_moe.py  test_falcon_h1.py  test_flops.py  test_flux2_klein.py  test_gemma.py  test_gemma2.py  test_gemma3.py  test_gemma3_text.py  test_gemma3n.py  test_glm.py  test_glm4.py  test_glm46v.py  test_glm4_moe.py  test_glm4_moe_lite.py  test_glm4v.py  test_glm4v_moe.py  test_gpt2.py  test_gpt_bigcode.py  test_gpt_neox.py  (+74 more)
tests/operations/: test_attention_runtime.py  test_turboquant_cache.py  test_unified_attention.py
(+923 files in other folders)
