[project]
name = "easymlx"
version = "0.0.1"
description = "Inference Only version of EasyDeL on Metal accelerators"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "mlx>=0.31.1",
    "partial-json-parser>=0.2.1.1.post7",
    "pydantic>=2.12.5",
    "transformers>=5.3.0",
    "uvicorn>=0.30.0",
]


[project.optional-dependencies]
server = ["fastapi>=0.100.0"]
tests = ["fastapi>=0.100.0"]

[project.scripts]
easymlx = "easymlx.cli:main"
easymlx-app = "easymlx.app.cli:main"

[tool.uv.build-backend]
module-name = "easymlx"
module-root = "lib/python"

[tool.setuptools]
package-dir = { "" = "lib/python" }

[tool.setuptools.packages.find]
where = ["lib/python"]

[tool.setuptools.package-data]
"easymlx" = ["py.typed"]
"easymlx.app" = ["static/*", "static/assets/*"]


[tool.black]
line-length = 121
target-version = ["py313"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py313"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "NPY", "RUF", "UP", "W"]

ignore = ["F722", "B008", "UP015", "A005", "UP037", "E501", "RUF001", "RUF002"]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/modeling_*.py" = ["UP037", "F821"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = ["lib/python/easymlx/"]

[tool.basedpyright]
reportAssignmentType = "none"
reportUnknownVariableType = "none"
reportPrivateUsage = "none"
reportOptionalCall = "none"
reportUnknownMemberType = "none"
reportGeneralTypeIssues = "none"
reportArgumentType = "none"
enableTypeIgnoreComments = true
reportMissingTypeArgument = "none"
reportUnknownParameterType = "none"
reportAny = "none"
reportCallIssue = "none"
reportUnknownArgumentType = "none"
reportRedeclaration = "none"
reportIgnoreCommentWithoutRule = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedCallResult = "none"
reportUnknownLambdaType = "none"
reportUnannotatedClassAttribute = "none"
reportImplicitStringConcatenation = "none"
reportMissingParameterType = "none"
reportImplicitOverride = "none"
reportImplicitAbstractClass = "none"
reportExplicitAny = "none"
reportIncompatibleMethodOverride = "none"
reportIndexIssue = "none"
reportAttributeAccessIssue = "none"
reportUnreachable = "none"
reportOptionalMemberAccess = "none"
reportOperatorIssue = "none"
reportUninitializedInstanceVariable = "none"
reportIncompatibleVariableOverride = "none"
reportPrivateImportUsage = "none"
reportUnusedParameter = "none"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]
pythonpath = ["lib/python"]
filterwarnings = ["ignore::DeprecationWarning"]
